--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   },
   "scripts": {
     "lonogara:add": "env-cmd ./.env cross-var yarn add git+https://$LONOGARA_TOKEN@$npm_package_lonogara",
-    "env:cjs": "cross-env BABEL_ENV=cjs",
-    "env:esm": "cross-env BABEL_ENV=esm",
-    "pipe": "yarn env:cjs chin -c .scripts/chin.config.json -p .scripts/chin.preset.js -v",
-    "node": "yarn env:cjs node --require babel-register",
+    "pipe": "cross-env BABEL_ENV=cjs chin -c .scripts/chin.config.json -p .scripts/chin.preset.js -v",
+    "node": "cross-env BABEL_ENV=cjs node --require babel-register",
     "prestart": "yarn node .scripts/prestart.js",
-    "start": "yarn env:cjs webpack-dev-server --config .scripts/webpack.config.dev.js",
-    "pro:pack": "yarn env:esm webpack -p --config .scripts/webpack.config.pro.js",
+    "start": "cross-env BABEL_ENV=cjs webpack-dev-server --config .scripts/webpack.config.dev.js",
+    "pro:pack": "cross-env BABEL_ENV=esm webpack -p --config .scripts/webpack.config.pro.js",
     "pro:pipe": "yarn pipe PRODUCTION:LIGHT",
     "pro:pipe_master": "yarn pipe PRODUCTION:MASTER",
     "pro:serve": "http-server _site -a localhost -p 7000 -o -c-1",
@@ -57,8 +55,8 @@
     "dotenv-webpack": "^1.5.4",
     "env-cmd": "^7.0.0",
     "execa": "^0.9.0",
-    "flow-bin": "^0.63.1",
-    "flow-typed": "^2.2.1",
+    "flow-bin": "^0.64.0",
+    "flow-typed": "^2.3.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
     "npm-run-all": "^4.1.2",
