--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,15 @@
     }]
   ],
   "env": {
-    "cjs": { "presets": [ ["env", { "targets": { "browsers": ["last 2 versions", "safari >= 7"] } }] ] },
-    "esm": { "presets": [ ["env", { "targets": { "browsers": ["last 2 versions", "safari >= 7"] }, "modules": false }] ] }
+    "cjs": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "safari >= 7"] } }]
+      ]
+    },
+    "esm": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "safari >= 7"] }, "modules": false }]
+      ]
+    }
   }
 }
