--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
   "name": "lonogara-boilerplate",
-  "lonogara": "github.com/kthjm/lonogara.git#0",
+  "lonogara": "github.com/kthjm/lonogara.git",
   "version": "0.0.0",
   "repository": "kthjm/lonogara-boilerplate",
   "author": "kthjm <toxictoxer@gmail.com>",
   "private": true,
-  "prettier": {
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true
-  },
   "scripts": {
-    "lonogara:add": "env-cmd ./.env cross-var yarn add git+https://$LONOGARA_TOKEN@$npm_package_lonogara",
-    "pipe": "cross-env BABEL_ENV=cjs chin -c .scripts/chin.config.json -p .scripts/chin.preset.js -v",
-    "node": "cross-env BABEL_ENV=cjs node --require babel-register",
-    "prestart": "yarn node .scripts/prestart.js",
-    "start": "cross-env BABEL_ENV=cjs webpack-dev-server --config .scripts/webpack.config.dev.js",
-    "pro:pack": "cross-env BABEL_ENV=esm webpack -p --config .scripts/webpack.config.pro.js",
-    "pro:pipe": "yarn pipe PRODUCTION:LIGHT",
-    "pro:pipe_master": "yarn pipe PRODUCTION:MASTER",
-    "pro:serve": "http-server _site -a localhost -p 7000 -o -c-1",
-    "prebuild": "yarn node .scripts/prebuild.js",
-    "build": "run-s pro:pack pro:pipe pro:serve",
-    "build:light": "run-s lonogara:add pro:pack pro:pipe",
-    "build:master": "run-s lonogara:add pro:pack pro:pipe_master",
-    "format": "prettier --write **/*.js **/*.md **/*.json",
-    "ikc": "yarn pipe INKSCHIN",
-    "precommit": "yarn node .scripts/precommit.js"
+    "precommit": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
+    "prestart": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
+    "prebuild": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
+    "postbuild": "yarn serve:pro",
+    "chin:pre": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
+    "chin:dev": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
+    "chin:mir": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
+    "chin:pro": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
+    "serve:dev": "parcel serve parcel.serve.html -d _local -o index.html --open",
+    "serve:pro": "http-server _site -a localhost -p 7000 -o -c-1",
+    "wpack:pro": "cross-env BABEL_ENV=esm webpack",
+    "wpack:non": "cross-env BABEL_ENV=esm webpack",
+    "wpack:ana": "cross-env BABEL_ENV=esm webpack --display-used-exports",
+    "wpack:spl": "cross-env BABEL_ENV=esm webpack",
+    "wpack:net": "run-s lonogara:add wpack:pro",
+    "start": "run-s chin:dev serve:dev",
+    "build": "run-s chin:mir wpack:pro",
+    "build:mirror": "run-s chin:mir wpack:net",
+    "build:master": "run-s chin:pro wpack:net",
+    "lonogara:add": "env-cmd ./.env cross-var yarn add git+https://$LONOGARA_TOKEN@$npm_package_lonogara"
   },
   "dependencies": {
-    "atra": "^1.1.2",
+    "atra": "^1.2.2",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "lonogara-sdk": "https://github.com/kthjm/lonogara-sdk#0",
-    "orph": "^3.0.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "lonogara-sdk": "https://github.com/kthjm/lonogara-sdk",
+    "orph": "^3.0.7",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-html-parser": "^2.0.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -45,10 +45,11 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "chin": "^2.1.2",
-    "chin-plugins-html-embed": "https://github.com/kthjm/chin-plugins-html-embed",
-    "chin-plugins-imagemin": "https://github.com/kthjm/chin-plugins-imagemin",
-    "chin-plugins-inkscape": "https://github.com/kthjm/chin-plugins-inkscape",
+    "chin": "^3.0.6",
+    "chin-plugin-favicons": "^0.0.2",
+    "chin-plugin-imagemin": "^0.0.3",
+    "chin-plugin-inkscape": "^0.0.6",
+    "chin-plugin-unified": "^0.0.3",
     "cross-env": "^5.1.3",
     "cross-var": "^1.1.0",
     "css-loader": "^0.28.9",
@@ -57,14 +58,16 @@
     "execa": "^0.9.0",
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.3.0",
+    "fs-extra": "^6.0.1",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
     "npm-run-all": "^4.1.2",
+    "parcel-bundler": "^1.8.1",
     "path-exists": "^3.0.0",
-    "prettier": "^1.10.2",
-    "rehype": "^5.0.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.0"
+    "rehype-format": "^2.2.0",
+    "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.13.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
