--- a/package.json
+++ b/package.json
@@ -1,41 +1,35 @@
 {
   "name": "lonogara-boilerplate",
-  "lonogara": "github.com/kthjm/lonogara.git",
-  "version": "0.0.0",
-  "repository": "kthjm/lonogara-boilerplate",
+  "version": "0.0.1",
+  "repository": "lonogara/boilerplate",
   "author": "kthjm <toxictoxer@gmail.com>",
-  "private": true,
   "scripts": {
-    "precommit": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
-    "prestart": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
-    "prebuild": "cross-env BABEL_ENV=cjs node -r babel-register hook.js",
-    "postbuild": "yarn serve:pro",
+    "serve:dev": "parcel serve parcel.serve.html -d _local -o index.html --open",
+    "serve:pro": "http-server _site -a localhost -p 7000 -o -c-1",
     "chin:pre": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
     "chin:dev": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
     "chin:mir": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
     "chin:pro": "cross-env BABEL_ENV=cjs chin -c -r babel-register",
-    "serve:dev": "parcel serve parcel.serve.html -d _local -o index.html --open",
-    "serve:pro": "http-server _site -a localhost -p 7000 -o -c-1",
     "wpack:pro": "cross-env BABEL_ENV=esm webpack",
     "wpack:non": "cross-env BABEL_ENV=esm webpack",
     "wpack:ana": "cross-env BABEL_ENV=esm webpack --display-used-exports",
     "wpack:spl": "cross-env BABEL_ENV=esm webpack",
-    "wpack:net": "run-s lonogara:add wpack:pro",
     "start": "run-s chin:dev serve:dev",
     "build": "run-s chin:mir wpack:pro",
-    "build:mirror": "run-s chin:mir wpack:net",
-    "build:master": "run-s chin:pro wpack:net",
-    "lonogara:add": "env-cmd ./.env cross-var yarn add git+https://$LONOGARA_TOKEN@$npm_package_lonogara"
+    "build:mirror": "run-s chin:mir wpack:pro",
+    "build:master": "run-s chin:pro wpack:pro",
+    "postbuild": "yarn serve:pro"
   },
   "dependencies": {
     "atra": "^1.2.2",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "lonogara-sdk": "https://github.com/kthjm/lonogara-sdk",
+    "lonogara-sdk": "https://github.com/lonogara/sdk#0.0.8",
     "orph": "^3.0.7",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-html-parser": "^2.0.2",
+    "react-lonogara": "https://github.com/lonogara/react-lonogara#0.0.11",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -51,19 +45,14 @@
     "chin-plugin-inkscape": "^0.0.6",
     "chin-plugin-unified": "^0.0.3",
     "cross-env": "^5.1.3",
-    "cross-var": "^1.1.0",
     "css-loader": "^0.28.9",
     "dotenv-webpack": "^1.5.4",
-    "env-cmd": "^7.0.0",
-    "execa": "^0.9.0",
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.3.0",
     "fs-extra": "^6.0.1",
     "http-server": "^0.11.1",
-    "husky": "^0.14.3",
     "npm-run-all": "^4.1.2",
     "parcel-bundler": "^1.8.1",
-    "path-exists": "^3.0.0",
     "rehype-format": "^2.2.0",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.13.0",
